# archify2

./: .gitignore  Cargo.toml  README.md
data/: client_token.json  config.json
src/: arguments.rs  conf.rs  database.rs  main.rs  spotify.rs
src/spotify/: authentication.rs  playlist_api.rs
