[package]
name = "archify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json		= "^1.0.93"
single-instance	= "^0.3.3"
clap			= {version = "^4.1.4", features = ["derive"]}
serde			= {version = "^1.0.152", features = ["derive"]}
base64			= "^0.21.0"
rusqlite		= {version = "^0.28.0", features = ["serde_json"]}
url				= "^2.3.1"
sha2			= "^0.10.6"
log 			= "^0.4.17"
env_logger		= "^0.10.0"
chrono			= "^0.4.23"
rspotify		= {version = "^0.11.6", features = ["cli"]}
tokio			= {version = "^1.25.0", features = ["rt", "rt-multi-thread"]}

[features]
proxy = []